--- a/hamscp.1
+++ b/hamscp.1
@@ -1,5 +1,5 @@
 .\"
-.\" scp.1
+.\" hamscp.1
 .\"
 .\" Author: Tatu Ylonen <ylo@cs.hut.fi>
 .\"
@@ -14,14 +14,14 @@
 .Dt SCP 1
 .Os
 .Sh NAME
-.Nm scp
+.Nm hamscp
 .Nd OpenSSH secure file copy
 .Sh SYNOPSIS
-.Nm scp
+.Nm hamscp
 .Op Fl 346ABCOpqRrsTv
 .Op Fl c Ar cipher
 .Op Fl D Ar sftp_server_path
-.Op Fl F Ar ssh_config
+.Op Fl F Ar hamssh_config
 .Op Fl i Ar identity_file
 .Op Fl J Ar destination
 .Op Fl l Ar limit
@@ -36,7 +36,7 @@ copies files between hosts on a network.
 .Pp
 .Nm
 uses the SFTP protocol over a
-.Xr ssh 1
+.Xr hamssh 1
 connection for data transfer, and uses the same authentication and provides
 the same security as a login session.
 .Pp
@@ -95,7 +95,7 @@ Forces
 to use IPv6 addresses only.
 .It Fl A
 Allows forwarding of
-.Xr ssh-agent 1
+.Xr hamssh-agent 1
 to the remote system.
 The default is not to forward an authentication agent.
 .It Fl B
@@ -105,28 +105,28 @@ Compression enable.
 Passes the
 .Fl C
 flag to
-.Xr ssh 1
+.Xr hamssh 1
 to enable compression.
 .It Fl c Ar cipher
 Selects the cipher to use for encrypting the data transfer.
 This option is directly passed to
-.Xr ssh 1 .
+.Xr hamssh 1 .
 .It Fl D Ar sftp_server_path
 Connect directly to a local SFTP server program rather than a
 remote one via
-.Xr ssh 1 .
+.Xr hamssh 1 .
 This option may be useful in debugging the client and server.
-.It Fl F Ar ssh_config
+.It Fl F Ar hamssh_config
 Specifies an alternative
 per-user configuration file for
-.Nm ssh .
+.Nm hamssh .
 This option is directly passed to
-.Xr ssh 1 .
+.Xr hamssh 1 .
 .It Fl i Ar identity_file
 Selects the file from which the identity (private key) for public key
 authentication is read.
 This option is directly passed to
-.Xr ssh 1 .
+.Xr hamssh 1 .
 .It Fl J Ar destination
 Connect to the target host by first making an
 .Nm
@@ -139,7 +139,7 @@ This is a shortcut to specify a
 .Cm ProxyJump
 configuration directive.
 This option is directly passed to
-.Xr ssh 1 .
+.Xr hamssh 1 .
 .It Fl l Ar limit
 Limits the used bandwidth, specified in Kbit/s.
 .It Fl O
@@ -151,15 +151,15 @@ wildcard patterns and for expanding paths with a
 prefix for older SFTP servers.
 .It Fl o Ar ssh_option
 Can be used to pass options to
-.Nm ssh
+.Nm hamssh
 in the format used in
-.Xr ssh_config 5 .
+.Xr hamssh_config 5 .
 This is useful for specifying options
 for which there is no separate
-.Nm scp
+.Nm hamscp
 command-line flag.
 For full details of the options listed below, and their possible values, see
-.Xr ssh_config 5 .
+.Xr hamssh_config 5 .
 .Pp
 .Bl -tag -width Ds -offset indent -compact
 .It AddressFamily
@@ -237,7 +237,7 @@ source file.
 .It Fl q
 Quiet mode: disables the progress meter as well as warning and diagnostic
 messages from
-.Xr ssh 1 .
+.Xr hamssh 1 .
 .It Fl R
 Copies between two remote hosts are performed by connecting to the origin
 host and executing
@@ -257,7 +257,7 @@ Name of
 .Ar program
 to use for the encrypted connection.
 The program must understand
-.Xr ssh 1
+.Xr hamssh 1
 options.
 .It Fl T
 Disable strict filename checking.
@@ -274,7 +274,7 @@ Verbose mode.
 Causes
 .Nm
 and
-.Xr ssh 1
+.Xr hamssh 1
 to print debugging messages about their progress.
 This is helpful in
 debugging connection, authentication, and configuration problems.
@@ -293,16 +293,16 @@ By default a 32KB buffer is used.
 .El
 .El
 .Sh EXIT STATUS
-.Ex -std scp
+.Ex -std hamscp
 .Sh SEE ALSO
-.Xr sftp 1 ,
-.Xr ssh 1 ,
-.Xr ssh-add 1 ,
-.Xr ssh-agent 1 ,
-.Xr ssh-keygen 1 ,
-.Xr ssh_config 5 ,
-.Xr sftp-server 8 ,
-.Xr sshd 8
+.Xr hamsftp 1 ,
+.Xr hamssh 1 ,
+.Xr hamssh-add 1 ,
+.Xr hamssh-agent 1 ,
+.Xr hamssh-keygen 1 ,
+.Xr hamssh_config 5 ,
+.Xr hamsftp-server 8 ,
+.Xr hamsshd 8
 .Sh HISTORY
 .Nm
 is based on the rcp program in
