--- a/hamssh-keyscan.1
+++ b/hamssh-keyscan.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ssh-keyscan.1,v 1.48 2023/02/10 04:56:30 djm Exp $
+.\"	$OpenBSD: hamssh-keyscan.1,v 1.48 2023/02/10 04:56:30 djm Exp $
 .\"
 .\" Copyright 1995, 1996 by David Mazieres <dm@lcs.mit.edu>.
 .\"
@@ -10,10 +10,10 @@
 .Dt SSH-KEYSCAN 1
 .Os
 .Sh NAME
-.Nm ssh-keyscan
+.Nm hamssh-keyscan
 .Nd gather SSH public keys from servers
 .Sh SYNOPSIS
-.Nm ssh-keyscan
+.Nm hamssh-keyscan
 .Op Fl 46cDHv
 .Op Fl f Ar file
 .Op Fl O Ar option
@@ -26,10 +26,10 @@
 is a utility for gathering the public SSH host keys of a number of
 hosts.
 It was designed to aid in building and verifying
-.Pa ssh_known_hosts
+.Pa hamssh_known_hosts
 files,
 the format of which is documented in
-.Xr sshd 8 .
+.Xr hamsshd 8 .
 .Nm
 provides a minimal interface suitable for use by shell and perl
 scripts.
@@ -40,7 +40,7 @@ parallel, so it is very efficient.
 The keys from a domain of 1,000
 hosts can be collected in tens of seconds, even when some of those
 hosts are down or do not run
-.Xr sshd 8 .
+.Xr hamsshd 8 .
 For scanning, one does not need
 login access to the machines that are being scanned, nor does the
 scanning process involve any encryption.
@@ -65,7 +65,7 @@ Request certificates from target hosts instead of plain keys.
 .It Fl D
 Print keys found as SSHFP DNS records.
 The default is to print keys in a format usable as a
-.Xr ssh 1
+.Xr hamssh 1
 .Pa known_hosts
 file.
 .It Fl f Ar file
@@ -93,9 +93,9 @@ happy.example.org
 .It Fl H
 Hash all hostnames and addresses in the output.
 Hashed names may be used normally by
-.Xr ssh 1
+.Xr hamssh 1
 and
-.Xr sshd 8 ,
+.Xr hamsshd 8 ,
 but they do not reveal identifying information should the file's contents
 be disclosed.
 .It Fl O Ar option
@@ -148,7 +148,7 @@ Verbose mode:
 print debugging messages about progress.
 .El
 .Pp
-If an ssh_known_hosts file is constructed using
+If an hamssh_known_hosts file is constructed using
 .Nm
 without verifying the keys, users will be vulnerable to
 .Em man in the middle
@@ -156,30 +156,30 @@ attacks.
 On the other hand, if the security model allows such a risk,
 .Nm
 can help in the detection of tampered keyfiles or man in the middle
-attacks which have begun after the ssh_known_hosts file was created.
+attacks which have begun after the hamssh_known_hosts file was created.
 .Sh FILES
-.Pa /etc/ssh/ssh_known_hosts
+.Pa /etc/hamssh/hamssh_known_hosts
 .Sh EXAMPLES
 Print the RSA host key for machine
 .Ar hostname :
 .Pp
-.Dl $ ssh-keyscan -t rsa hostname
+.Dl $ hamssh-keyscan -t rsa hostname
 .Pp
 Search a network range, printing all supported key types:
 .Pp
-.Dl $ ssh-keyscan 192.168.0.64/25
+.Dl $ hamssh-keyscan 192.168.0.64/25
 .Pp
 Find all hosts from the file
-.Pa ssh_hosts
+.Pa hamssh_hosts
 which have new or different keys from those in the sorted file
-.Pa ssh_known_hosts :
+.Pa hamssh_known_hosts :
 .Bd -literal -offset indent
-$ ssh-keyscan -t rsa,dsa,ecdsa,ed25519 -f ssh_hosts | \e
-	sort -u - ssh_known_hosts | diff ssh_known_hosts -
+$ hamssh-keyscan -t rsa,dsa,ecdsa,ed25519 -f hamssh_hosts | \e
+	sort -u - hamssh_known_hosts | diff hamssh_known_hosts -
 .Ed
 .Sh SEE ALSO
-.Xr ssh 1 ,
-.Xr sshd 8
+.Xr hamssh 1 ,
+.Xr hamsshd 8
 .Rs
 .%D 2006
 .%R RFC 4255
